# scale_rotation_invariant_match

./: CMakeLists.txt  README.md  download.sh  main2.cpp  match_pict.cpp  match_pict.h  split_to_tiles.cpp  visualization.h
